added 'smooth-scrollbar' plugin for smooth scrolling effect.

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -84,6 +84,9 @@ $perspective: 20px;
 	overflow: scroll;
 	overflow-x: hidden;
 }
+.scroll-content{
+	transform-style: preserve-3d;
+}
 
 /*landing screen*/
 .landing-container{
