--- a/src/css/index.css
+++ b/src/css/index.css
@@ -44,6 +44,9 @@ h1, h2, h3, h4, a {
   overflow: scroll;
   overflow-x: hidden; }
 
+.scroll-content {
+  transform-style: preserve-3d; }
+
 /*landing screen*/
 .landing-container {
   display: grid;
