--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -47,15 +47,22 @@ h1, h2, h3, h4, a{
 	grid-row: 1 / 13;
 }
 
+$perspective: 20px;
+.home-container{
+	height: 100vh;
+	perspective: $perspective;
+	overflow: scroll;
+	overflow-x: hidden;
+}
 
 /* header start */
 
 .header{
 	top: 0;
-   position: absolute;
-   width: 100%;
+   	position: absolute;
+   	width: 100%;
 	z-index: 10;
-	display: flex;
+	display: none;// flex;
 	flex-direction: row;
 	justify-content: space-between;
 	.name{
@@ -77,20 +84,13 @@ h1, h2, h3, h4, a{
 	}
 }
 
-$perspective: 20px;
-.home-container{
-	height: 100vh;
-	perspective: $perspective;
-	overflow: scroll;
-	overflow-x: hidden;
-}
 .scroll-content{
 	transform-style: preserve-3d;
 }
 
 /*landing screen*/
 .landing-container{
-	display: grid;
+	display: none;// grid;
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: repeat(12, 8.33%);
 	height: 170vh;
@@ -199,7 +199,7 @@ $services-font-size: 1.4em;
 .our-services{
 	width: 100vw;
 	height: 100vh;
-	display: grid;
+	display: none;// grid;
 	grid-template-columns: repeat(12, calc(100%/12));
 	grid-template-rows: repeat(8, calc(100%/8));
 	.skills-container{
@@ -292,73 +292,106 @@ $headline-font-size: 2em;
 		font-family: $headline-font;
 		font-size: $headline-font-size - .1;
 		padding: 1em;
-		margin-bottom: 2em;
+		margin-bottom: 4em;
 	}
+	$project-height: 31vw;
 	.projects{
+		display: flex;
+		flex-direction: column;
 		grid-column: span 3;
 		.project{
+			margin-top: -5vw;
+			position: relative;
 			grid-column: span 3;
 			display: grid;
-			grid-template-columns: repeat(7, calc(100%/7));
+			height: $project-height;
+			//border: 1px solid blue;
+			grid-template-columns: repeat(20, calc(100%/20));;
+			grid-template-rows:  repeat(3, calc(100%/3));
 			.project-thumbnail{
+				//border: 5px solid green;
 				position: relative;
-				width: 95%;
-				height: 35vw;
+				display: flex;
+				//align-self: center;
+				width: 100%;
+				height: $project-height;
 				overflow: hidden;
+				grid-row: 1 / 3;
 				.parallax-img-container{
-					//border: 1px solid red;
+					//border: 5px solid red;
 					position: relative;
-					width: 45vw;
+					width: 100%;
+					height: 100%;
 					transform-style: preserve-3d;
 					img{
 						position: relative;
-						height: 100%;
+						width: 100%;
+						//need to calculate the left value on the fly
+						//left: 
 						transform-origin: 50% 50%;
 						transform: translateZ(-8px) scale(1.55);
 					}
 				}
 			}
+			.spacer{
+				background: black;
+				width: 1px;
+				height: 100%;
+				grid-column: 10 / 12;
+				justify-self: center;
+				&:nth-child(1){
+					grid-row: 1 / 2;
+				}
+				&:nth-child(2){
+					grid-row: 3 / 4;
+				}
+			}
 			.project-name{
-				display: flex;
-				padding: 1em;
-				font-family: $headline-font;
-				font-size: $small-text-font-size + 2;
+				position: relative;
+				box-sizing: border-box;
+				font-family: raleway_thin;
+				font-size: $small-text-font-size + 1.3;
+				padding: 1vw 3vw;
+				align-self: center;
 			}
 			&:nth-child(odd){
 				.project-name{
-					grid-column: 2 / 5;
-					align-self: center;
-					justify-self: right;
+					grid-column: 1 / 12;
+					justify-content: left;
 					text-align: right;
 				}
 				.project-thumbnail{
 					justify-self: right;
-					grid-row: 1 / 1;
-					grid-column: 5 / 8;
+					grid-column: 12 / 21;
 				}
 			}
 			&:nth-child(even){
 				.project-name{
-					align-self: center;
-					justify-self: left;
-					grid-column: 4 / 7;
+					grid-column: 10 / 21;
 					text-align: left;
+					.spacer{
+						//margin-left: 1.93em;
+						//justify-self: left;
+					}
 				}
 				.project-thumbnail{
+					//border: 1px solid green;
 					justify-self: left;
 					grid-row: 1 / 1;
-					grid-column: 1 / 4;
+					grid-column: 1 / 10;
 				}
 			}
 		}
 	}
 	.show-more{
-		grid-column: 1 / 4;
+		position: relative;
+		left: 50%;
+		transform: translateX(-50%);
 		color: white;
 		font-family: $small-text-font;
 		margin-top: 1em;
 		padding: .7em;
-		width: 100%;
+		display: inline-block;
 		background: black;
 	}
 }
