added script to automatically correct position of 3d elements in XY plane, made the footer.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,13 +20,17 @@ h1, h2, h3, h4, a {
   overflow: scroll;
   overflow-x: hidden; }
 
+.scroll-content {
+  position: relative;
+  transform-style: preserve-3d; }
+
 /* header start */
 .header {
   top: 0;
-  position: absolute;
+  position: sticky;
   width: 100%;
   z-index: 10;
-  display: none;
+  display: flex;
   flex-direction: row;
   justify-content: space-between; }
   .header .name {
@@ -35,21 +39,31 @@ h1, h2, h3, h4, a {
     font-family: code_bold;
     font-size: 1.6em; }
   .header .nav {
+    width: 25%;
     display: flex;
-    background-repeat: no-repeat;
-    background-position: 100% 50%; }
+    align-self: center; }
   .header .link {
+    position: relative;
     z-index: 2;
     padding: 1em 1.5em;
-    font-family: rezo_zero;
-    font-size: 1vw; }
-
-.scroll-content {
-  transform-style: preserve-3d; }
+    font-family: raleway_regular; }
+    .header .link a {
+      position: relative; }
+    .header .link a:after {
+      content: '';
+      background: black;
+      width: 0%;
+      height: 1px;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      transition: .3s; }
+    .header .link a:hover:after {
+      width: 100%; }
 
 /*landing screen*/
 .landing-container {
-  display: none;
+  display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(12, 8.33%);
   height: 170vh;
@@ -100,30 +114,21 @@ h1, h2, h3, h4, a {
           height: 100%;
           filter: grayscale(100%);
           transform-origin: 50% 50%;
-          transform: translateZ(-5px) scale(1.55); }
+          transform: translateZ(-5px) scale(1.25); }
     .landing-container .fixed-animating-objects .mm1 {
       left: 77vw;
       top: 20%; }
-      .landing-container .fixed-animating-objects .mm1 img {
-        left: 48%;
-        top: -8%; }
     .landing-container .fixed-animating-objects .mm2 {
       left: 37vw;
       top: 65%; }
-      .landing-container .fixed-animating-objects .mm2 img {
-        left: 0;
-        top: -8%; }
     .landing-container .fixed-animating-objects .mm3 {
       left: 0vw;
       top: 50%; }
-      .landing-container .fixed-animating-objects .mm3 img {
-        left: -38%;
-        top: -8%; }
 
 .our-services {
   width: 100vw;
   height: 100vh;
-  display: none;
+  display: grid;
   grid-template-columns: repeat(12, calc(100%/12));
   grid-template-rows: repeat(8, calc(100%/8)); }
   .our-services .skills-container {
@@ -214,6 +219,7 @@ h1, h2, h3, h4, a {
         width: 100%;
         height: 31vw;
         overflow: hidden;
+        background: black;
         grid-row: 1 / 3; }
         .previous-projects .projects .project .project-thumbnail .parallax-img-container {
           position: relative;
@@ -224,7 +230,7 @@ h1, h2, h3, h4, a {
             position: relative;
             width: 100%;
             transform-origin: 50% 50%;
-            transform: translateZ(-8px) scale(1.55); }
+            transform: translateZ(-8px) scale(1.4); }
       .previous-projects .projects .project .spacer {
         background: black;
         width: 1px;
@@ -256,75 +262,118 @@ h1, h2, h3, h4, a {
         justify-self: left;
         grid-row: 1 / 1;
         grid-column: 1 / 10; }
-  .previous-projects .show-more {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    color: white;
-    font-family: quicksand_regular;
-    margin-top: 1em;
-    padding: .7em;
-    display: inline-block;
-    background: black; }
 
-.test-ground {
-  display: flex;
-  justify-content: center;
-  height: 70vh;
-  margin: 10em;
-  overflow-y: scroll;
-  perspective: 5px;
-  border: 1px solid black; }
+.footer {
+  margin-top: 10em;
+  width: 100vw;
+  height: 35em;
+  display: grid;
+  grid-template-columns: repeat(20, calc(100%/20));
+  grid-template-rows: repeat(10, calc(100%/10)); }
+  .footer .footer-back {
+    grid-column: 6 / 21;
+    grid-row: 1 / 9;
+    overflow: hidden; }
+    .footer .footer-back img {
+      width: 100%;
+      height: 100%; }
+  .footer .main-footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    font-family: borda_light;
+    max-height: 100%;
+    color: white;
+    grid-row: 3 / 11;
+    grid-column: 1 / 18;
+    background: black;
+    align-self: flex-end; }
+    .footer .main-footer .contact-info-container {
+      grid-column: 1 / 3;
+      padding: 5%;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr; }
+      .footer .main-footer .contact-info-container .info {
+        line-height: 1.5em;
+        padding: 1em; }
+        .footer .main-footer .contact-info-container .info:nth-child(odd) {
+          grid-column: 1 / 2; }
+        .footer .main-footer .contact-info-container .info h3 {
+          padding: .5em 0em; }
+    .footer .main-footer .about-us {
+      padding: 3em; }
+      .footer .main-footer .about-us .headline {
+        font-family: code_regular;
+        font-size: 3em; }
+      .footer .main-footer .about-us .description {
+        font-family: quicksand_light;
+        width: 14em;
+        font-size: 1.1em; }
+  .footer .social-links {
+    position: relative;
+    background: black;
+    grid-row: 5 / 10;
+    grid-column: 20 / 21;
+    width: 70%;
+    padding: 20% 0%;
+    justify-self: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+    .footer .social-links img {
+      padding: 21%;
+      width: 60%;
+      filter: invert(100%); }
 
 /* abandoned peep's styles
 
 .services-container{
-	background-image: url(../../assets/particles.png);
-	padding-top: 4em;
-	padding-bottom: 12em;
-	display: grid;
+	background-image     : url(../../assets/particles.png);
+	padding-top          : 4em;
+	padding-bottom       : 12em;
+	display              : grid;
 	grid-template-columns: 1fr 85vw 1fr;
-	grid-template-rows: auto;
+	grid-template-rows   : auto;
 	.headline{
-		grid-column: span 3;
-		width: 100%;
-		display: flex;
+		grid-column    : span 3;
+		width          : 100%;
+		display        : flex;
 		justify-content: center;
-		font-family: $headline-font;
-		font-size: $headline-font-size;
+		font-family    : $headline-font;
+		font-size      : $headline-font-size;
 	}
 	.services{
-		display: grid;
-		grid-column: 2;
+		display              : grid;
+		grid-column          : 2;
 		grid-template-columns: 1fr 1fr 1fr;
 		//min-height: 100vh;
 		.service{
-			display: grid;
+			display              : grid;
 			grid-template-columns: 1fr 20vw 1fr;
-			align-content: baseline;
+			align-content        : baseline;
 			> *{
 				grid-column: 2;
 			}
 			.service-name{
-				margin-top: 1.2em;
-				padding: .8em 0em;
+				margin-top : 1.2em;
+				padding    : .8em 0em;
 				font-family: $title-font;
-				font-size: $headline-font-size + .5;
+				font-size  : $headline-font-size + .5;
 			}
 			.service-list{
 				font-family: $small-text-font;
 				li{
-					font-size: $small-text-font-size + .4;
+					font-size      : $small-text-font-size + .4;
 					list-style-type: none;
 				}
 			}
 			.learn-more{
-				color: white;
+				color      : white;
 				font-family: $small-text-font;
-				margin-top: 1em;
-				padding: .7em;
-				width: 5.5em;
-				background: black;
+				margin-top : 1em;
+				padding    : .7em;
+				width      : 5.5em;
+				background : black;
 			}
 		}
 	}
