--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,222 +7,228 @@
    	grid-column: $start;
   	}
   	&:nth-child(2) {
-   	grid-column: ($start + $increment);// / ($end + $increment;
+   	grid-column: ($start + $increment);  // / ($end + $increment;
   	}
   	&:nth-child(3) {
-   	grid-column: ($start + $increment*2);// / ($end + $increment*2);
+   	grid-column: ($start + $increment*2);  // / ($end + $increment*2);
   	}
 }
 
-$title-font: code_bold;
-$header-font: code_bold;
+$title-font      : code_bold;
+$header-font     : code_bold;
 $header-font-size: 1.6em;
 
 
-$big-text-font: quicksand_light;
-$big-text-font-size: 6vw;
-$small-text-font: quicksand_regular;
+$big-text-font       : quicksand_light;
+$big-text-font-size  : 6vw;
+$small-text-font     : quicksand_regular;
 $small-text-font-size: 1em;
 
-$landing-font-size: $big-text-font-size + 1;
-$services-font-size-size: 5vw;
+$landing-font-size        : $big-text-font-size + 1;
+$services-font-size-size  : 5vw;
 $services-header-font-size: $services-font-size-size + 1;
 
 
 body{
-	margin: 0;
-	padding: 0;
+	margin    : 0;
+	padding   : 0;
 	overflow-x: hidden;
 }
 h1, h2, h3, h4, a{
-	margin: 0;
-	padding: 0;
+	margin         : 0;
+	padding        : 0;
 	text-decoration: none;
-	color: inherit;
+	color          : inherit;
 }
 
 /* particles js stuff */
 .particles-js-canvas-el{
 	grid-column: 1 / 8;
-	grid-row: 1 / 13;
+	grid-row   : 1 / 13;
 }
 
 $perspective: 20px;
 .home-container{
-	height: 100vh;
+	height     : 100vh;
 	perspective: $perspective;
-	overflow: scroll;
-	overflow-x: hidden;
-}
-
-/* header start */
-
-.header{
-	top: 0;
-   	position: absolute;
-   	width: 100%;
-	z-index: 10;
-	display: none;// flex;
-	flex-direction: row;
-	justify-content: space-between;
-	.name{
-		margin: 0;
-		padding: 1em;
-		font-family: $header-font;
-		font-size: $header-font-size;
-	}
-	.nav{
-		display: flex;
-		background-repeat: no-repeat;
-		background-position: 100% 50%;
-	}
-	.link{
-		z-index: 2;
-		padding: 1em 1.5em;
-		font-family: rezo_zero;
-		font-size: 1vw;
-	}
+	overflow   : scroll;
+	overflow-x : hidden;
 }
 
 .scroll-content{
+	position: relative;
 	transform-style: preserve-3d;
+}
+
+/* header start */
+.header{
+	top            : 0;
+	position       : sticky;
+	width          : 100%;
+	z-index        : 10;
+	display        : flex;
+	flex-direction : row;
+	justify-content: space-between;
+	.name{
+		margin     : 0;
+		padding    : 1em;
+		font-family: $header-font;
+		font-size  : $header-font-size;
+	}
+	.nav{
+		//border: 1px solid black;
+		width: 25%;
+		display   : flex;
+		align-self: center;
+	}
+	.link{
+		position: relative;
+		z-index    : 2;
+		padding    : 1em 1.5em;
+		font-family: raleway_regular;
+		a{
+			position: relative;
+		}
+		a:after{
+			content: '';
+			background: black;
+			width: 0%;
+			height: 1px;
+			position: absolute;
+			top: 100%;
+			left: 0;
+			transition: .3s;
+		}
+		a:hover:after{
+			width: 100%;
+		}
+	}
 }
 
 /*landing screen*/
 .landing-container{
-	display: none;// grid;
+	display              : grid;
 	grid-template-columns: repeat(8, 1fr);
-	grid-template-rows: repeat(12, 8.33%);
-	height: 170vh;
-	width: 100%;
-	position: relative;
+	grid-template-rows   : repeat(12, 8.33%);
+	height               : 170vh;
+	width                : 100%;
+	position             : relative;
 	//background-image: url(../../assets/particles.png);
 	.particlejs-background{
-		display: none;
-		position: absolute;
-		width: 100%;
-		height: 100%;
+		display    : none;
+		position   : absolute;
+		width      : 100%;
+		height     : 100%;
 		grid-column: 1 / 9;
-		grid-row: 1 / 13;
+		grid-row   : 1 / 13;
 		//z-index: -1;
 	}
 	.landing-text{
-		margin-left: 1em;
-		grid-column: span 3;
-		grid-row: 4;
-		width: 100%;
-		display: flex;
+		margin-left   : 1em;
+		grid-column   : span 3;
+		grid-row      : 4;
+		width         : 100%;
+		display       : flex;
 		flex-direction: column;
-		z-index: 10;
+		z-index       : 10;
 		h1{
 			font-family: $big-text-font;
-			font-size: $landing-font-size;
-			padding: .01em .1em;
+			font-size  : $landing-font-size;
+			padding    : .01em .1em;
 		   //line-height : 83.82px;
 		}
 		.special{
-			font-size: $landing-font-size + .5;
-			width: 5em;
-			color: #FEFEFE;
+			font-size : $landing-font-size + .5;
+			width     : 5em;
+			color     : #FEFEFE;
 			background: black;
 		}
 	}
 	
-	$mm-width: 23vw;
-	$mm-height: 25vw;
-	$mm-translateZ: 5px;
+	$mm-width     : 23vw;
+	$mm-height    : 25vw;
+	$mm-translateZ: -5px;
+	$mm-scale     : ($perspective - $mm-translateZ)/$perspective;
 	
 	$mm1-left: 100vw - $mm-width;
-	$mm1-top: 20%;
+	$mm1-top : 20%;
 	//$mm1-inner-left: 
 	
 	$mm2-left: 60vw - $mm-width;
-	$mm2-top: 65%;
+	$mm2-top : 65%;
 	
 	$mm3-left: 0vw;
-	$mm3-top: 50%;
+	$mm3-top : 50%;
 	.fixed-animating-objects{
-		position: absolute;
+		position   : absolute;
 		grid-column: span 8;
-		grid-row: span 12;
-		display: flex;
-		height: 100%;
-		width: 100%;
+		grid-row   : span 12;
+		display    : flex;
+		height     : 100%;
+		width      : 100%;
 		.mm{
 			//border: 1px solid black;
 			position: absolute;
-			width: $mm-width;
-			height: $mm-height;
+			width   : $mm-width;
+			height  : $mm-height;
 			overflow: hidden;
 			.parallax-img-container{
 				//border: 1px solid red;
-				position: relative;
-				height: $mm-height;
+				position       : relative;
+				height         : $mm-height;
 				transform-style: preserve-3d;
 				img{
-					position: relative;
-					height: 100%;
-					filter: grayscale(100%);
+					position        : relative;
+					height          : 100%;
+					filter          : grayscale(100%);
 					transform-origin: 50% 50%;
-					transform: translateZ(-$mm-translateZ) scale(1.55);
+					transform       : translateZ($mm-translateZ) scale($mm-scale);
 				}
 			}
 		}
 		.mm1{
 			left: $mm1-left;
-			top: $mm1-top;
-			img{
-				left: 48%;
-				top: -8%;
-			}
+			top : $mm1-top;
 		}
 		.mm2{
 			left: $mm2-left;
-			top: $mm2-top;
-			img{
-				left: 0;
-				top: -8%;
-			}
+			top : $mm2-top;
 		}
 		.mm3{
 			left: $mm3-left;
-			top: $mm3-top;
-			img{
-				left: -38%;
-				top: -8%;
-			}
+			top : $mm3-top;
 		}
 	}
 }
 
 $services-font-size: 1.4em;
 .our-services{
-	width: 100vw;
-	height: 100vh;
-	display: none;// grid;
+	width                : 100vw;
+	height               : 100vh;
+	display              : grid;
 	grid-template-columns: repeat(12, calc(100%/12));
-	grid-template-rows: repeat(8, calc(100%/8));
+	grid-template-rows   : repeat(8, calc(100%/8));
 	.skills-container{
-		position: relative;
-		grid-row: 3 / 8;
+		position   : relative;
+		grid-row   : 3 / 8;
 		grid-column: 4;
-		min-width: 20em;
+		min-width  : 20em;
 		font-family: quicksand_light;
 		li{
 			list-style-type: none;
 		}
 		.skill-container-title{
-			font-size: $services-font-size;
+			font-size     : $services-font-size;
 			padding-bottom: 1.5em;
 		}
 		.skill{
-			position: relative;
-			font-size: $services-font-size + .1em;
-			padding-bottom: .1em;
-			max-height: $services-font-size + .3em;
-			overflow: hidden;
-			transition: .6s;
-			cursor: pointer;
+			position                  : relative;
+			font-size                 : $services-font-size + .1em;
+			padding-bottom            : .1em;
+			max-height                : $services-font-size + .3em;
+			overflow                  : hidden;
+			transition                : .6s;
+			cursor                    : pointer;
 			transition-timing-function: ease-in-out;
 		}
 		.skill:hover{
@@ -230,14 +236,14 @@ $services-font-size: 1.4em;
 		}
 		.skill-list{
 			li:before{
-				margin-top: .5em;
-				position: absolute;
+				margin-top : .5em;
+				position   : absolute;
 				margin-left: -1em;
-				height: 2px;
-				width: 9px;
-				background: black;
-				content: '';
-				transition: .2s;
+				height     : 2px;
+				width      : 9px;
+				background : black;
+				content    : '';
+				transition : .2s;
 			}
 			li:hover:before{
 				margin-left: .2em;
@@ -245,18 +251,18 @@ $services-font-size: 1.4em;
 		}
 	}
 	.tech-container{
-		grid-row: 3;
-		grid-column: 7 / 9; 
-		width: 15em;
+		grid-row   : 3;
+		grid-column: 7 / 9;
+		width      : 15em;
 		font-family: quicksand_light;
-		font-size: $services-font-size;
+		font-size  : $services-font-size;
 		.tech-container-title{
-			font-family: raleway_regular;
+			font-family   : raleway_regular;
 			padding-bottom: .5em;
 		}
 		.text{
 			font-family: quicksand_regular;
-			font-size: $services-font-size - .55em;
+			font-size  : $services-font-size - .55em;
 		}
 		.more{
 			position: relative;
@@ -265,11 +271,11 @@ $services-font-size: 1.4em;
 			}
 		}
 		.more:before{
-			position: absolute;
-			height: 100%;
-			width: 1px;
+			position  : absolute;
+			height    : 100%;
+			width     : 1px;
 			background: black;
-			content: '';
+			content   : '';
 			transition: .1s;
 		}
 		.more:hover:before{
@@ -280,64 +286,65 @@ $services-font-size: 1.4em;
 
 
 
-$headline-font: borda_light;
+$headline-font     : borda_light;
 $headline-font-size: 2em;
 .previous-projects{
-	display: grid;
+	display              : grid;
 	grid-template-columns: repeat(3, 1fr);
 	.headline{
-		grid-column: span 3;
-		display: flex;
+		grid-column    : span 3;
+		display        : flex;
 		justify-content: center;
-		font-family: $headline-font;
-		font-size: $headline-font-size - .1;
-		padding: 1em;
-		margin-bottom: 4em;
+		font-family    : $headline-font;
+		font-size      : $headline-font-size - .1;
+		padding        : 1em;
+		margin-bottom  : 4em;
 	}
 	$project-height: 31vw;
 	.projects{
-		display: flex;
+		display       : flex;
 		flex-direction: column;
-		grid-column: span 3;
+		grid-column   : span 3;
 		.project{
-			margin-top: -5vw;
-			position: relative;
+			margin-top : -5vw;
+			position   : relative;
 			grid-column: span 3;
-			display: grid;
-			height: $project-height;
+			display    : grid;
+			height     : $project-height;
 			//border: 1px solid blue;
 			grid-template-columns: repeat(20, calc(100%/20));;
-			grid-template-rows:  repeat(3, calc(100%/3));
+			grid-template-rows   : repeat(3, calc(100%/3));
 			.project-thumbnail{
 				//border: 5px solid green;
 				position: relative;
-				display: flex;
+				display : flex;
 				//align-self: center;
-				width: 100%;
-				height: $project-height;
-				overflow: hidden;
-				grid-row: 1 / 3;
+				width     : 100%;
+				height    : $project-height;
+				overflow  : hidden;
+				background: black;
+				grid-row  : 1 / 3;
 				.parallax-img-container{
 					//border: 5px solid red;
-					position: relative;
-					width: 100%;
-					height: 100%;
+					position       : relative;
+					width          : 100%;
+					height         : 100%;
 					transform-style: preserve-3d;
 					img{
 						position: relative;
-						width: 100%;
+						width   : 100%;
 						//need to calculate the left value on the fly
 						//left: 
 						transform-origin: 50% 50%;
-						transform: translateZ(-8px) scale(1.55);
+						transform       : translateZ(-8px) scale(1.4);
 					}
 				}
 			}
 			.spacer{
-				background: black;
-				width: 1px;
-				height: 100%;
-				grid-column: 10 / 12;
+				background  : black;
+				width       : 1px;
+				height      : 100%;
+				grid-column : 10 / 12;
 				justify-self: center;
 				&:nth-child(1){
 					grid-row: 1 / 2;
@@ -347,28 +354,28 @@ $headline-font-size: 2em;
 				}
 			}
 			.project-name{
-				position: relative;
-				box-sizing: border-box;
+				position   : relative;
+				box-sizing : border-box;
 				font-family: raleway_thin;
-				font-size: $small-text-font-size + 1.3;
-				padding: 1vw 3vw;
-				align-self: center;
+				font-size  : $small-text-font-size + 1.3;
+				padding    : 1vw 3vw;
+				align-self : center;
 			}
 			&:nth-child(odd){
 				.project-name{
-					grid-column: 1 / 12;
+					grid-column    : 1 / 12;
 					justify-content: left;
-					text-align: right;
+					text-align     : right;
 				}
 				.project-thumbnail{
 					justify-self: right;
-					grid-column: 12 / 21;
+					grid-column : 12 / 21;
 				}
 			}
 			&:nth-child(even){
 				.project-name{
 					grid-column: 10 / 21;
-					text-align: left;
+					text-align : left;
 					.spacer{
 						//margin-left: 1.93em;
 						//justify-self: left;
@@ -377,88 +384,142 @@ $headline-font-size: 2em;
 				.project-thumbnail{
 					//border: 1px solid green;
 					justify-self: left;
-					grid-row: 1 / 1;
-					grid-column: 1 / 10;
+					grid-row    : 1 / 1;
+					grid-column : 1 / 10;
 				}
 			}
 		}
 	}
-	.show-more{
-		position: relative;
-		left: 50%;
-		transform: translateX(-50%);
+}
+
+
+.footer{
+	margin-top: 10em;
+	width: 100vw;
+	height: 35em;
+	display: grid;
+	grid-template-columns: repeat(20, calc(100%/20));
+	grid-template-rows: repeat(10, calc(100%/10));
+	.footer-back{
+		grid-column: 6 / 21;
+		grid-row: 1 / 9;
+		overflow: hidden;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.main-footer{
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+		font-family: borda_light;
+		max-height: 100%;
 		color: white;
-		font-family: $small-text-font;
-		margin-top: 1em;
-		padding: .7em;
-		display: inline-block;
+		grid-row: 3 / 11;
+		grid-column: 1 / 18;
 		background: black;
+		align-self: flex-end;
+		.contact-info-container{
+			grid-column: 1 / 3;
+			padding: 5%;
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+			.info{
+				line-height: 1.5em;
+				padding: 1em;
+				&:nth-child(odd){
+					grid-column: 1 / 2;
+				}
+				h3{
+					padding: .5em 0em;
+				}
+			}
+		}
+		.about-us{
+			padding: 3em;
+			.headline{
+				font-family: code_regular;
+				font-size: 3em;
+				//-webkit-text-stroke: 2px;
+			}
+			.description{
+				font-family: quicksand_light;
+				width: 14em;
+				font-size: 1.1em;
+			}
+		}
+	}
+
+	.social-links{
+		position: relative;
+		background: black;
+		grid-row: 5 / 10;
+		grid-column: 20 / 21;
+		width: 70%;
+		padding: 20% 0%;
+		justify-self: right;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		img{
+			padding: 21%;
+			width: 60%;
+			filter: invert(100%);
+		}
 	}
 }
-
-.test-ground{
-	display: flex;
-	justify-content: center;
-	height: 70vh;
-	margin: 10em;
-	overflow-y: scroll;
-	perspective: 5px;
-	border: 1px solid black;
-	//perspective-origin: top left;
-
-}
-
 
 
 /* abandoned peep's styles
 
 .services-container{
-	background-image: url(../../assets/particles.png);
-	padding-top: 4em;
-	padding-bottom: 12em;
-	display: grid;
+	background-image     : url(../../assets/particles.png);
+	padding-top          : 4em;
+	padding-bottom       : 12em;
+	display              : grid;
 	grid-template-columns: 1fr 85vw 1fr;
-	grid-template-rows: auto;
+	grid-template-rows   : auto;
 	.headline{
-		grid-column: span 3;
-		width: 100%;
-		display: flex;
+		grid-column    : span 3;
+		width          : 100%;
+		display        : flex;
 		justify-content: center;
-		font-family: $headline-font;
-		font-size: $headline-font-size;
+		font-family    : $headline-font;
+		font-size      : $headline-font-size;
 	}
 	.services{
-		display: grid;
-		grid-column: 2;
+		display              : grid;
+		grid-column          : 2;
 		grid-template-columns: 1fr 1fr 1fr;
 		//min-height: 100vh;
 		.service{
-			display: grid;
+			display              : grid;
 			grid-template-columns: 1fr 20vw 1fr;
-			align-content: baseline;
+			align-content        : baseline;
 			> *{
 				grid-column: 2;
 			}
 			.service-name{
-				margin-top: 1.2em;
-				padding: .8em 0em;
+				margin-top : 1.2em;
+				padding    : .8em 0em;
 				font-family: $title-font;
-				font-size: $headline-font-size + .5;
+				font-size  : $headline-font-size + .5;
 			}
 			.service-list{
 				font-family: $small-text-font;
 				li{
-					font-size: $small-text-font-size + .4;
+					font-size      : $small-text-font-size + .4;
 					list-style-type: none;
 				}
 			}
 			.learn-more{
-				color: white;
+				color      : white;
 				font-family: $small-text-font;
-				margin-top: 1em;
-				padding: .7em;
-				width: 5.5em;
-				background: black;
+				margin-top : 1em;
+				padding    : .7em;
+				width      : 5.5em;
+				background : black;
 			}
 		}
 	}
