--- a/src/css/index.css
+++ b/src/css/index.css
@@ -204,6 +204,7 @@ h1, h2, h3, h4, a {
   .previous-projects .projects {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     grid-column: span 3; }
     .previous-projects .projects .project {
       margin-top: -5vw;
@@ -230,7 +231,7 @@ h1, h2, h3, h4, a {
             position: relative;
             width: 100%;
             transform-origin: 50% 50%;
-            transform: translateZ(-8px) scale(1.4); }
+            transform: translateZ(-5px) scale(1.4); }
       .previous-projects .projects .project .spacer {
         background: black;
         width: 1px;
@@ -262,6 +263,25 @@ h1, h2, h3, h4, a {
         justify-self: left;
         grid-row: 1 / 1;
         grid-column: 1 / 10; }
+    .previous-projects .projects .show-more {
+      position: relative;
+      color: black;
+      padding: 1em;
+      font-family: quicksand_medium;
+      margin-top: 1em;
+      align-self: center; }
+      .previous-projects .projects .show-more :after {
+        content: '';
+        background: black;
+        width: 100%;
+        height: 0px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        transition: .1s;
+        transition-delay: .05s; }
+      .previous-projects .projects .show-more :hover:after {
+        height: 2px; }
 
 .footer {
   margin-top: 10em;
