--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -304,6 +304,7 @@ $headline-font-size: 2em;
 	.projects{
 		display       : flex;
 		flex-direction: column;
+		justify-content: center;
 		grid-column   : span 3;
 		.project{
 			margin-top : -5vw;
@@ -336,7 +337,7 @@ $headline-font-size: 2em;
 						//need to calculate the left value on the fly
 						//left: 
 						transform-origin: 50% 50%;
-						transform       : translateZ(-8px) scale(1.4);
+						transform       : translateZ(-5px) scale(1.4);
 					}
 				}
 			}
@@ -387,6 +388,29 @@ $headline-font-size: 2em;
 					grid-row    : 1 / 1;
 					grid-column : 1 / 10;
 				}
+			}
+		}
+		.show-more{
+			//background: black;
+			position: relative;
+			color: black;
+			padding: 1em;
+			font-family: quicksand_medium;
+			margin-top: 1em;
+			align-self: center;
+			:after{
+				content: '';
+				background: black;
+				width: 100%;
+				height: 0px;
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				transition: .1s;
+				transition-delay: .05s;
+			}
+			:hover:after{
+				height: 2px;
 			}
 		}
 	}
