--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,7 +15,7 @@
 }
 
 $title-font      : code_bold;
-$header-font     : code_bold;
+$header-font     : code_regular;
 $header-font-size: 1.6em;
 
 
@@ -63,14 +63,14 @@ $perspective: 20px;
 /* header start */
 .header{
 	top            : 0;
-	position       : sticky;
+	position       : fixed;
 	width          : 100%;
 	z-index        : 10;
 	display        : flex;
 	flex-direction : row;
 	justify-content: space-between;
 	.name{
-		margin     : 0;
+		margin-left     : 4vw;
 		padding    : 1em;
 		font-family: $header-font;
 		font-size  : $header-font-size;
@@ -124,29 +124,19 @@ $perspective: 20px;
 		//z-index: -1;
 	}
 	.landing-text{
-		margin-left   : 1em;
-		grid-column   : span 3;
-		grid-row      : 4;
+		margin-left   : 4vw;
+		font-family: raleway_regular;
+		font-size: 7em;
+		grid-column   : span 5;
+		grid-row      : 3;
 		width         : 100%;
 		display       : flex;
 		flex-direction: column;
 		z-index       : 10;
-		h1{
-			font-family: $big-text-font;
-			font-size  : $landing-font-size;
-			padding    : .01em .1em;
-		   //line-height : 83.82px;
-		}
-		.special{
-			font-size : $landing-font-size + .5;
-			width     : 5em;
-			color     : #FEFEFE;
-			background: black;
-		}
 	}
 	
-	$mm-width     : 23vw;
-	$mm-height    : 25vw;
+	$mm-width     : 28vw;
+	$mm-height    : 32vw;
 	$mm-translateZ: -5px;
 	$mm-scale     : ($perspective - $mm-translateZ)/$perspective;
 	
@@ -286,8 +276,8 @@ $services-font-size: 1.4em;
 
 
 
-$headline-font     : borda_light;
-$headline-font-size: 2em;
+$headline-font     : quicksand_light;
+$headline-font-size: 1em;
 .previous-projects{
 	display              : grid;
 	grid-template-columns: repeat(3, 1fr);
@@ -296,9 +286,9 @@ $headline-font-size: 2em;
 		display        : flex;
 		justify-content: center;
 		font-family    : $headline-font;
-		font-size      : $headline-font-size - .1;
+		font-size      : $headline-font-size;
 		padding        : 1em;
-		margin-bottom  : 4em;
+		margin-bottom  : 7vw;
 	}
 	$project-height: 31vw;
 	.projects{
@@ -334,8 +324,6 @@ $headline-font-size: 2em;
 					img{
 						position: relative;
 						width   : 100%;
-						//need to calculate the left value on the fly
-						//left: 
 						transform-origin: 50% 50%;
 						transform       : translateZ(-5px) scale(1.4);
 					}
@@ -358,7 +346,7 @@ $headline-font-size: 2em;
 				position   : relative;
 				box-sizing : border-box;
 				font-family: raleway_thin;
-				font-size  : $small-text-font-size + 1.3;
+				font-size  : $small-text-font-size + 1;
 				padding    : 1vw 3vw;
 				align-self : center;
 			}
