--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -39,3 +39,91 @@
         font-family: rezo_zero;
     }
 }
+.about-container{
+    display: flex;
+    flex-direction: row;
+    .about-img{
+        position: relative;
+        top: -20vh;
+        img{
+            width: 35vw;
+        }
+    }
+    .about-text{
+        position: relative;
+        width: 20em;
+        padding: 8rem 10rem;
+        p{  
+            font-family: quicksand_medium;
+            font-size: 2em;
+            width: 100%;
+            text-align: center;
+        }
+    }
+}
+.skills-pasion-container{
+    //padding: 3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    div{
+        padding: 0em 3rem;
+        font-family: quicksand_medium;
+        width: 18rem;
+        .title{
+            font-size: .9rem;
+            padding-bottom: .4rem;
+            font-family: monospace;
+            margin: .5em 0em;
+        }
+        li{
+            line-height: 1.2em;
+            font-size: 1.9em;
+            list-style-type: none;
+        }
+        p{
+            font-family: quicksand_regular;
+            font-size: 1.1em;
+            margin: 0;
+        }
+    }
+    .skills-container{
+
+    }
+}
+
+.special-text-container{
+    cursor: none;
+    margin-top: 8em;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    .anim-container{
+        z-index: 10;
+        position: absolute;
+        width: 150vw;
+        height: 100%;
+    }
+    .special-img img{
+        top: 10rem;
+        z-index: 5;
+        left: 50vw;
+        transform: translateX(-50%);
+        max-width: 25rem;
+        position: absolute;
+    }
+    .special-text{
+        position: relative;
+        color: #202020;
+        font-family: rezo_zero;
+        font-size: 9rem;
+        left: 50vw;
+        opacity: .3;
+        transition: .5s;
+        transition-timing-function: cubic-bezier(.55,.94,.59,.49);
+    }
+    .special-text-onview{
+        left: 30vw !important;
+        opacity: 1 !important;
+    }
+}
